--- a/app/notFound.module.css
+++ b/app/notFound.module.css
@@ -26,3 +26,32 @@
     line-height: 29px;
     margin-bottom: 40px;
 }
+
+/* Responsive CSS Start */
+@media screen and (max-width: 1600px) {
+}
+@media screen and (max-width: 1400px) {
+}
+@media screen and (max-width: 1366px) {
+}
+@media screen and (max-width: 1200px) {
+    .notFoundTitle {
+        font-size: 45px;
+    }
+}
+@media screen and (max-width: 1024px) {
+}
+@media screen and (max-width: 992px) {
+}
+@media screen and (max-width: 768px) {
+}
+@media screen and (max-width: 575px) {
+    .notFoundTitle {
+        font-size: 34px;
+    }
+}
+@media screen and (max-width: 480px) {
+}
+@media screen and (max-width: 360px) {
+}
+/* Responsive CSS End */
